[gd_scene load_steps=10 format=2]

[ext_resource path="res://core/game_stages/common/GameStage.tscn" type="PackedScene" id=1]
[ext_resource path="res://quiz_game/textures/wooden-texture-gb10000acb_1920.jpg" type="Texture" id=2]
[ext_resource path="res://quiz_game/game_stages/setup_stage/QuizGameSetupStage.gd" type="Script" id=3]
[ext_resource path="res://quiz_game/ui/fonts/PermanentMarker-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://quiz_game/ui/QuizGameTheme.tres" type="Theme" id=5]
[ext_resource path="res://quiz_game/trivia_service/TriviaService.tscn" type="PackedScene" id=7]
[ext_resource path="res://quiz_game/game_stages/setup_stage/QuizCategoriesSelection.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=3]
size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_mipmaps = true
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 4 )

[node name="QuizGameSetupStage" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="TriviaService" parent="." index="0" instance=ExtResource( 7 )]

[node name="Background" parent="." index="1"]
texture = ExtResource( 2 )

[node name="SetupOptionsContainer" type="VBoxContainer" parent="." index="4"]
margin_left = 50.0
margin_top = -3.0
margin_right = 1870.0
margin_bottom = 1030.0
theme = ExtResource( 5 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="SetupOptionsContainer" index="0"]
margin_right = 1820.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 3 )
text = "Setup"
align = 1
valign = 1

[node name="QuizCategoriesSelection" type="VBoxContainer" parent="SetupOptionsContainer" index="1"]
margin_top = 143.0
margin_right = 1820.0
margin_bottom = 788.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 10
script = ExtResource( 8 )

[node name="ChooseRoundsTitle" type="Label" parent="SetupOptionsContainer/QuizCategoriesSelection" index="0"]
margin_right = 1820.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Choose rounds"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SetupOptionsContainer/QuizCategoriesSelection" index="1"]
margin_top = 52.0
margin_right = 1820.0
margin_bottom = 406.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="CategoryList" type="GridContainer" parent="SetupOptionsContainer/QuizCategoriesSelection/ScrollContainer" index="0"]
margin_right = 1820.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[node name="ChosenRoundsTitle" type="Label" parent="SetupOptionsContainer/QuizCategoriesSelection" index="2"]
margin_top = 416.0
margin_right = 1820.0
margin_bottom = 458.0
custom_fonts/font = SubResource( 2 )
text = "Chosen rounds"
align = 1
valign = 1

[node name="ChosenCategoriesScrollContainer" type="ScrollContainer" parent="SetupOptionsContainer/QuizCategoriesSelection" index="3"]
margin_top = 468.0
margin_right = 1820.0
margin_bottom = 645.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
scroll_vertical_enabled = false

[node name="ChosenCategoriesList" type="HBoxContainer" parent="SetupOptionsContainer/QuizCategoriesSelection/ChosenCategoriesScrollContainer" index="0"]
margin_bottom = 177.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SetupOptionsContainer" index="2"]
margin_top = 808.0
margin_right = 1820.0
margin_bottom = 916.0

[node name="Label" type="Label" parent="SetupOptionsContainer/VBoxContainer" index="0"]
margin_right = 1820.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Round Length"
align = 1
valign = 1

[node name="RoundLengthHSlider" type="HSlider" parent="SetupOptionsContainer/VBoxContainer" index="1"]
margin_top = 46.0
margin_right = 1820.0
margin_bottom = 62.0
max_value = 2.0
tick_count = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SetupOptionsContainer/VBoxContainer" index="2"]
margin_top = 66.0
margin_right = 1820.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="SetupOptionsContainer/VBoxContainer/HBoxContainer" index="0"]
margin_right = 604.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Short"
valign = 1

[node name="Label2" type="Label" parent="SetupOptionsContainer/VBoxContainer/HBoxContainer" index="1"]
margin_left = 608.0
margin_right = 1212.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Medium"
align = 1
valign = 1

[node name="Label3" type="Label" parent="SetupOptionsContainer/VBoxContainer/HBoxContainer" index="2"]
margin_left = 1216.0
margin_right = 1820.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Long"
align = 2
valign = 1

[node name="PlayButton" type="Button" parent="SetupOptionsContainer" index="3"]
margin_top = 936.0
margin_right = 1820.0
margin_bottom = 1033.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
text = "PLAY"

[connection signal="value_changed" from="SetupOptionsContainer/VBoxContainer/RoundLengthHSlider" to="." method="_on_round_length_slider_value_changed"]
[connection signal="pressed" from="SetupOptionsContainer/PlayButton" to="." method="_on_play_button_pressed"]
